--- a/index.html
+++ b/index.html
@@ -51,8 +51,17 @@
     <h2>5. Data Security</h2>
     <p>We implement industry-standard encryption and security measures to protect user data from unauthorized access.</p>
 
-    <h2>6. Changes to This Policy</h2>
+    <h2>6. Data Retention and Deletion Policy</h2>
+    <p>We retain personal data for as long as necessary to provide our services, comply with legal obligations, resolve disputes, and enforce agreements. Users can request the deletion of their personal data at any time by contacting us through the provided email.</p>
+
+    <h2>7. Changes to This Policy</h2>
     <p>We may update this Privacy Policy, and any significant changes will be announced through our Service.</p>
+
+    <h2>8. Developer Information</h2>
+    <p>This Privacy Policy is provided by [Developer LEE YOUNGNO/EduCom], the developer of this mobile application.</p>
+
+    <h2>9. Privacy Officer</h2>
+    <p>If you have any questions about this Privacy Policy or wish to exercise your data protection rights, please contact our Privacy Officer at: <a href="mailto:blockchaindev35@gmail.com">blockchaindev35@gmail.com</a>.</p>
 
     <p>Last updated: February 18, 2025</p>
 
