--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy</title>
+    <title>Developer Information</title>
     <style>
         body { font-family: Arial, sans-serif; line-height: 1.6; max-width: 800px; margin: 20px auto; padding: 20px; }
         h1, h2 { color: #333; }
@@ -12,58 +12,21 @@
 </head>
 <body>
 
-    <h1>Privacy Policy</h1>
-    <p>This Privacy Policy describes how we collect, use, and share information when you use our mobile application (the "Service").</p>
+    <h1>Developer Information</h1>
+    <p>This mobile application is developed by <strong>LEE YOUNGNO</strong>, the founder of <strong>EduCom</strong>.</p>
+    <p>If you have any questions or feedback regarding the application, please feel free to contact us at: <a href="mailto:blockchaindev35@gmail.com">blockchaindev35@gmail.com</a>.</p>
 
-    <h2>1. Information We Collect</h2>
-    <p>We may collect the following types of information:</p>
+    <h2>About Us</h2>
+    <p>EduCom is a company focused on delivering high-quality educational tools and services. Our goal is to create apps that make learning more efficient and accessible to everyone.</p>
+
+    <h2>Contact Information</h2>
     <ul>
-        <li>Email address (for customer support and account management)</li>
-        <li>Device information (to optimize app performance and fix bugs)</li>
-        <li>Location data (only with user consent, for personalized services)</li>
+        <li>Email: <a href="mailto:blockchaindev35@gmail.com">blockchaindev35@gmail.com</a></li>
+        <li>Website: <a href="https://web3santa.github.io/Privacy-Policy/" target="_blank">https://web3santa.github.io/Privacy-Policy/</a></li>
     </ul>
 
-    <h2>2. Purpose of Data Collection</h2>
-    <p>We use the collected information for the following purposes:</p>
-    <ul>
-        <li>To provide and improve app functionality</li>
-        <li>To support and respond to user inquiries</li>
-        <li>To display ads and analyze user activity (via Google AdMob and Google Analytics)</li>
-    </ul>
-
-    <h2>3. Third-Party Data Sharing</h2>
-    <p>We may share collected data with the following third-party services:</p>
-    <ul>
-        <li>Google Analytics (to analyze app usage)</li>
-        <li>Google AdMob (to provide personalized ads)</li>
-    </ul>
-    <p>Users can manage ad preferences through Google Ad Settings: <a href="https://adssettings.google.com/">here</a>.</p>
-
-    <h2>4. User Rights</h2>
-    <p>Users have the following rights regarding their personal data:</p>
-    <ul>
-        <li>Request access, modification, or deletion of their personal data</li>
-        <li>Disable personalized advertisements</li>
-        <li>Withdraw consent for data collection</li>
-    </ul>
-    <p>To request any of the above actions, please contact us via email: <a href="mailto:blockchaindev35@gmail.com">blockchaindev35@gmail.com</a>.</p>
-
-    <h2>5. Data Security</h2>
-    <p>We implement industry-standard encryption and security measures to protect user data from unauthorized access.</p>
-
-    <h2>6. Data Retention and Deletion Policy</h2>
-    <p>We retain personal data for as long as necessary to provide our services, comply with legal obligations, resolve disputes, and enforce agreements. Users can request the deletion of their personal data at any time by contacting us through the provided email.</p>
-
-    <h2>7. Changes to This Policy</h2>
-    <p>We may update this Privacy Policy, and any significant changes will be announced through our Service.</p>
-
-    <h2>8. Developer Information</h2>
-    <p>This Privacy Policy is provided by [Developer LEE YOUNGNO/EduCom], the developer of this mobile application.</p>
-
-    <h2>9. Privacy Officer</h2>
-    <p>If you have any questions about this Privacy Policy or wish to exercise your data protection rights, please contact our Privacy Officer at: <a href="mailto:blockchaindev35@gmail.com">blockchaindev35@gmail.com</a>.</p>
-
-    <p>Last updated: February 18, 2025</p>
+    <h2>Privacy Policy</h2>
+    <p>To view our Privacy Policy, please visit the following link: <a href="privacy.html">Privacy Policy</a>.</p>
 
 </body>
 </html>
